# mcp-tools

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
core/: __init__.py
core/model/: __init__.py
core/tools/: __init__.py  youtube_tools.py
server/: __init__.py  http_server.py
tests/: test_get_transcript.py
youtube_mcp_tools/: __init__.py  __main__.py  main.py
youtube_mcp_tools/core/model/: response_model.py  youtube_model.py
youtube_mcp_tools/core/tools/: youtube_tools.py
youtube_mcp_tools/server/: __init__.py  http_server.py  stdio_server.py  tools.py
